[package]
name = "blockchain-client"
version = "1.0.0"
edition = "2024"
description = "A client for interacting with BTC-based blockchains."
license = "MIT"
readme = "README.md"
keywords = ["blockchain", "bitcoin", "litecoin", "node", "rpc"]
categories = ["crypto", "network-programming", "command-line-utilities"]

[dependencies]
async-trait = "0.1.89"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[dev-dependencies]
tokio = { version = "1.50.0", features = ["full"] }

